--- a/Items Page/Translations/Items Page Changes.g.xlf
+++ b/Items Page/Translations/Items Page Changes.g.xlf
@@ -113,6 +113,46 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Option3 Card Extension - Control Option3 Value - Property Caption</note>
         </trans-unit>
+        <trans-unit id="PageExtension 3226554048 - Control 1287047147 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Price DKK</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Price DKK Card Extension - Control Price DKK - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3226554048 - Control 3164211949 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Product Type</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Product T Card Extension - Control Product Type - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3226554048 - Control 1434822636 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Published</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Published Card Extension - Control Published - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3226554048 - Control 2907803002 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Shopify Status</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Shopify S Card Extension - Control Shopify Status - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3226554048 - Control 3085847199 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Socket</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Socket Card Extension - Control Socket - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3226554048 - Control 548838851 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Tags</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Tags Card Extension - Control Tags - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3226554048 - Control 378404797 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Variant Barcode</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Va Barcode Card Extension - Control Variant Barcode - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="PageExtension 3226554048 - Control 2980656648 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Variant Compare At Price DKK</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item VCAPDKK Card Extension - Control Variant Compare At Price DKK - Property Caption</note>
+        </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 1936001480 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Vendor</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -237,6 +277,46 @@
           <source>Option3 Value</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Option3 Extension - Field Option3 Value - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 901006396 - Field 1287047147 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Price DKK</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Price DKK Extension - Field Price DKK - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 901006396 - Field 3164211949 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Product Type</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Product T Extension - Field Product Type - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 901006396 - Field 1434822636 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Published</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Published Extension - Field Published - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 901006396 - Field 2907803002 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Shopify Status</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Shopify S Extension - Field Shopify Status - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 901006396 - Field 3085847199 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Socket</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Socket Extension - Field Socket - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 901006396 - Field 548838851 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Tags</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Tags Extension - Field Tags - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 901006396 - Field 378404797 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Variant Barcode</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Va Barcode Extension - Field Variant Barcode - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 901006396 - Field 2980656648 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Variant Compare At Price DKK</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item VCAPDKK Extension - Field Variant Compare At Price DKK - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 1936001480 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Vendor</source>
