--- a/Items Page/Translations/Items Page Changes.g.xlf
+++ b/Items Page/Translations/Items Page Changes.g.xlf
@@ -28,6 +28,11 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item CPI Card Extension - Control Cost Per Item - Property Caption</note>
         </trans-unit>
+        <trans-unit id="PageExtension 3226554048 - Control 674271132 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Delivery D</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Delivery D Card Extension - Control Delivery D - Property Caption</note>
+        </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 814761759 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Depth (cm)</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -63,15 +68,10 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Length Card Extension - Control Length - Property Caption</note>
         </trans-unit>
-        <trans-unit id="PageExtension 3226554048 - Control 1193406327 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
-          <source>Option1 Name</source>
+        <trans-unit id="PageExtension 3226554048 - Control 3965678037 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Material</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Option1 Card Extension - Control Option1 Name - Property Caption</note>
-        </trans-unit>
-        <trans-unit id="PageExtension 3226554048 - Control 903103539 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
-          <source>Option1 Value</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Option1 Card Extension - Control Option1 Value - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Material Card Extension - Control Material - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 3905013095 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Option 1 Name</source>
@@ -92,16 +92,6 @@
           <source>Option 2 Value</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Option1_2 Card Extension - Control Option 2 Value - Property Caption</note>
-        </trans-unit>
-        <trans-unit id="PageExtension 3226554048 - Control 614490826 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
-          <source>Option2 Name</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Option2 Card Extension - Control Option2 Name - Property Caption</note>
-        </trans-unit>
-        <trans-unit id="PageExtension 3226554048 - Control 1160634558 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
-          <source>Option2 Value</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Option2 Card Extension - Control Option2 Value - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 227563289 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Option3 Name</source>
@@ -193,6 +183,11 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item CPI Extension - Field Cost Per Item - Property Caption</note>
         </trans-unit>
+        <trans-unit id="TableExtension 901006396 - Field 674271132 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Delivery D</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Delivery D Extension - Field Delivery D - Property Caption</note>
+        </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 814761759 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Depth (cm)</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -228,15 +223,10 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Length Extension - Field Length - Property Caption</note>
         </trans-unit>
-        <trans-unit id="TableExtension 901006396 - Field 1193406327 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
-          <source>Option1 Name</source>
+        <trans-unit id="TableExtension 901006396 - Field 3965678037 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Material</source>
           <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Option1 Extension - Field Option1 Name - Property Caption</note>
-        </trans-unit>
-        <trans-unit id="TableExtension 901006396 - Field 903103539 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
-          <source>Option1 Value</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Option1 Extension - Field Option1 Value - Property Caption</note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Material Extension - Field Material - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 3905013095 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Option 1 Name</source>
@@ -257,16 +247,6 @@
           <source>Option 2 Value</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Option1_2 Extension - Field Option 2 Value - Property Caption</note>
-        </trans-unit>
-        <trans-unit id="TableExtension 901006396 - Field 614490826 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
-          <source>Option2 Name</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Option2 Extension - Field Option2 Name - Property Caption</note>
-        </trans-unit>
-        <trans-unit id="TableExtension 901006396 - Field 1160634558 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
-          <source>Option2 Value</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Option2 Extension - Field Option2 Value - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 227563289 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Option3 Name</source>
