--- a/Items Page/Translations/Items Page Changes.da-DK.xlf
+++ b/Items Page/Translations/Items Page Changes.da-DK.xlf
@@ -9,6 +9,12 @@
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Barcode Card Extension - Control Barcode - Property Caption</note>
         </trans-unit>
+        <trans-unit id="PageExtension 3226554048 - Control 1046588192 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Body (HTML)</source>
+          <target state="translated">Body (HTML)</target>
+          <note from="Developer" annotates="general" priority="2"/>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Body HTML Card Extension - Control Body (HTML) - Property Caption</note>
+        </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 3011597373 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Brand</source>
           <target state="translated">Brand</target>
@@ -149,31 +155,31 @@
         </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 3828462839 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Packaging depth (cm)</source>
-          <target state="needs-translation"/>
+          <target state="translated">Emballage dybde (cm)</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Pack D Card Extension - Control Packaging depth (cm) - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 1972368121 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Packaging height (cm)</source>
-          <target state="needs-translation"/>
+          <target state="translated">Emballage højde (cm)</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Pack H Card Extension - Control Packaging height (cm) - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 319558320 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Packaging length (cm)</source>
-          <target state="needs-translation"/>
+          <target state="translated">Emballage længde (cm)</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Pack L Card Extension - Control Packaging length (cm) - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 2156432844 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Packaging weight (cm)</source>
-          <target state="needs-translation"/>
+          <target state="translated">Emballage vægt (cm)</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Pack W Card Extension - Control Packaging weight (cm) - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 1178075874 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Packaging width (cm)</source>
-          <target state="needs-translation"/>
+          <target state="translated">Emballage bredde (cm)</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Pack Wi Card Extension - Control Packaging width (cm) - Property Caption</note>
         </trans-unit>
@@ -188,12 +194,6 @@
           <target state="translated">Produkttype</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Product T Card Extension - Control Product Type - Property Caption</note>
-        </trans-unit>
-        <trans-unit id="PageExtension 3226554048 - Control 3325407262 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
-          <source>Published scope</source>
-          <target state="needs-translation"/>
-          <note from="Developer" annotates="general" priority="2"/>
-          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Pub Scope Card Extension - Control Published scope - Property Caption</note>
         </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 1434822636 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Published</source>
@@ -260,6 +260,12 @@
           <target state="translated">Stregkode</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Barcode Extension - Field Barcode - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 901006396 - Field 1046588192 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Body (HTML)</source>
+          <target state="translated">Body (HTML)</target>
+          <note from="Developer" annotates="general" priority="2"/>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Body HTML Extension - Field Body (HTML) - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 3011597373 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Brand</source>
@@ -407,25 +413,25 @@
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 1972368121 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Packaging height (cm)</source>
-          <target state="needs-translation"/>
+          <target state="translated">Emballage højde (cm)</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Pack H Extension - Field Packaging height (cm) - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 319558320 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Packaging length (cm)</source>
-          <target state="needs-translation"/>
+          <target state="translated">Emballage længde (cm)</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Pack L Extension - Field Packaging length (cm) - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 2156432844 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Packaging weight (cm)</source>
-          <target state="needs-translation"/>
+          <target state="translated">Emballage vægt (cm)</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Pack W Extension - Field Packaging weight (cm) - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 1178075874 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Packaging width (cm)</source>
-          <target state="needs-translation"/>
+          <target state="translated">Emballage bredde (cm)</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Pack Wi Extension - Field Packaging width (cm) - Property Caption</note>
         </trans-unit>
@@ -440,12 +446,6 @@
           <target state="translated">Produkttype</target>
           <note from="Developer" annotates="general" priority="2"/>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Product T Extension - Field Product Type - Property Caption</note>
-        </trans-unit>
-        <trans-unit id="TableExtension 901006396 - Field 3325407262 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
-          <source>Published scope</source>
-          <target state="needs-translation"/>
-          <note from="Developer" annotates="general" priority="2"/>
-          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Pub Scope Extension - Field Published scope - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 1434822636 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Published</source>
