--- a/Items Page/Translations/Items Page Changes.g.xlf
+++ b/Items Page/Translations/Items Page Changes.g.xlf
@@ -8,6 +8,11 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Barcode Card Extension - Control Barcode - Property Caption</note>
         </trans-unit>
+        <trans-unit id="PageExtension 3226554048 - Control 1046588192 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
+          <source>Body (HTML)</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Body HTML Card Extension - Control Body (HTML) - Property Caption</note>
+        </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 3011597373 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Brand</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -158,11 +163,6 @@
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Product T Card Extension - Control Product Type - Property Caption</note>
         </trans-unit>
-        <trans-unit id="PageExtension 3226554048 - Control 3325407262 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
-          <source>Published scope</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">PageExtension Item Pub Scope Card Extension - Control Published scope - Property Caption</note>
-        </trans-unit>
         <trans-unit id="PageExtension 3226554048 - Control 1434822636 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Page 1434786627">
           <source>Published</source>
           <note from="Developer" annotates="general" priority="2"></note>
@@ -217,6 +217,11 @@
           <source>Barcode</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Barcode Extension - Field Barcode - Property Caption</note>
+        </trans-unit>
+        <trans-unit id="TableExtension 901006396 - Field 1046588192 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
+          <source>Body (HTML)</source>
+          <note from="Developer" annotates="general" priority="2"></note>
+          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Body HTML Extension - Field Body (HTML) - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 3011597373 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Brand</source>
@@ -367,11 +372,6 @@
           <source>Product Type</source>
           <note from="Developer" annotates="general" priority="2"></note>
           <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Product T Extension - Field Product Type - Property Caption</note>
-        </trans-unit>
-        <trans-unit id="TableExtension 901006396 - Field 3325407262 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
-          <source>Published scope</source>
-          <note from="Developer" annotates="general" priority="2"></note>
-          <note from="Xliff Generator" annotates="general" priority="3">TableExtension Item Pub Scope Extension - Field Published scope - Property Caption</note>
         </trans-unit>
         <trans-unit id="TableExtension 901006396 - Field 1434822636 - Property 2879900210" size-unit="char" translate="yes" xml:space="preserve" al-object-target="Table 3276313895">
           <source>Published</source>
